Fix overflowing on sidebar with long project names

--- a/src/styles/sidebar.css
+++ b/src/styles/sidebar.css
@@ -5,6 +5,7 @@
   row-gap: 8px;
   grid-area: 2 / 1 / 3 / 2;
   background-color: var(--sidebar);
+  overflow: hidden;
 }
 
 #side-bar h1 {
